<resources>

    <!--region titles-->
    <string name="recents">Recents</string>
    <string name="contacts">Contacts</string>
    <string name="preferences">Tools</string>
    <string name="conference">Conference</string>
    <string name="default_page">Default</string>
    <string name="settings">Settings</string>
    <string name="theme_mode_dark">Dark</string>
    <string name="theme_mode_light">Light</string>
    <string name="theme_mode_system">System</string>
    <!--endregion-->

    <!--region prompt-->
    <string name="prompt_yes_or_no">Yes or No?</string>
    <string name="prompt_are_you_sure">Are you sure?</string>
    <!--endregion-->

    <!--region messages-->
    <string name="number_copied_to_clipboard">Number copied to clipboard</string>
    <!--endregion-->

    <!--region actions-->
    <string name="action_yes">Yap</string>
    <string name="action_no">Nope</string>
    <string name="action_answer">Answer</string>
    <string name="action_hangup">Hangup</string>
    <string name="action_show_history">Show History</string>
    <string name="action_block_number">Block Number</string>
    <string name="action_unblock_number">Unblock Number</string>
    <string name="action_choose_audio_route">Choose audio route</string>
    <string name="action_choose_phone_account">Choose phone account</string>
    <!--endregion-->

    <!--region Koler-->
    <string name="app_name">Koler</string>
    <string name="support_email">choolookulu@gmail.com</string>
    <!--endregion-->

    <!--region hints-->
    <string name="hint_search">Search</string>
    <string name="hint_theme_mode">Theme Mode</string>
    <string name="hint_sim_account">Sim Account</string>
    <string name="hint_default_page">Default Page</string>
    <string name="hint_animations">Show animations</string>
    <string name="hint_search_recents">Search Recents</string>
    <string name="hint_search_contacts">Search Contacts</string>
    <string name="hint_compact_mode">Make list items compact</string>
    <string name="hint_search_items">Search contacts &amp; recents</string>
    <string name="hint_dialpad_vibrate">Vibrate on dialpad clicks</string>
    <string name="hint_should_ask_sim">Ask for a sim before each call</string>
    <string name="hint_dialpad_tones">Enabled sound tones on dialpad clicks</string>
    <string name="hint_show_blocked">Show block/unblock option for numbers (requires default dialer).</string>
    <!--endregion-->

    <!--region warning-->
    <string name="explain_is_on_hold">%s is on hold</string>
    <string name="explain_choose_theme_mode">Set Koler\'s theme mode, restart the app to see the changes</string>
    <string name="explain_choose_sim_account">Call with a different sim</string>
    <string name="explain_choose_audio_route">Route audio to a different source</string>
    <string name="explain_choose_phone_account">Continue the current call using a specific phone account</string>
    <string name="explain_delete_contact">This contact will be deleted permanently</string>
    <string name="explain_delete_recent">This call log will be deleted permanently</string>
    <string name="explain_choose_default_page">This page will be selected whenever you reopen Koler</string>
    <!--endregion-->

    <!--region urls-->
    <string name="app_source_url">https://github.com/Chooloo/call_manage</string>
    <string name="app_bug_reporting_url">https://github.com/Chooloo/call_manage/issues</string>
    <string name="donation_link">https://www.paypal.com/paypalme/theroeiedri?locale.x=en_US</string>
    <!--endregion-->

    <!--region call actions -->
    <string name="call_action_mute">Mute</string>
    <string name="call_action_unmute">Unmute</string>
    <string name="call_action_speaker">Speaker</string>
    <string name="call_action_speaker_off">Off Speaker</string>
    <!--endregion-->

    <!--region call state-->
    <string name="call_status_new">New Call</string>
    <string name="call_status_dialing">Dialing…</string>
    <string name="call_status_holding">Call On Hold</string>
    <string name="call_status_connecting">Connecting…</string>
    <string name="call_status_incoming">Incoming Call</string>
    <string name="call_status_active">Call In Progress</string>
    <string name="call_status_disconnected">Call ended</string>
    <string name="call_status_pulling_call">Pulling Call…</string>
    <string name="call_status_unknown">Unknown call status</string>
    <string name="call_status_disconnecting">Call Disconnecting…</string>
    <string name="call_status_phone_account">Select phone account</string>
    <!--endregion-->

    <!--region pref key-->
    <string name="pref_key_rate">rate</string>
    <string name="pref_key_compact">compact</string>
    <string name="pref_key_ask_sim">ask_sim</string>
    <string name="pref_key_color">accent_color</string>
    <string name="pref_key_animations">animations</string>
    <string name="pref_key_theme_mode">theme_mode</string>
    <string name="pref_key_report_bugs">report_bugs</string>
    <string name="pref_key_show_blocked">show_blocked</string>
    <string name="pref_key_default_page">default_page</string>
    <string name="pref_key_dialpad_tones">dialpad_tones</string>
    <string name="pref_key_manage_blocked">manage_blocked</string>
    <string name="pref_key_dialpad_vibrate">dialpad_vibrate</string>
    <!--endregion-->

    <!--region pref title-->
    <string name="pref_title_rate">Rate</string>
    <string name="pref_title_compact">Compact Mode</string>
    <string name="pref_title_animations">Animations</string>
    <string name="pref_title_app_color">Accent Color</string>
    <string name="pref_title_theme_mode">Theme Mode</string>
    <string name="pref_title_email">Email Us</string>
    <string name="pref_title_report_bugs">Report Bugs</string>
    <string name="pref_title_manage_blocked">Manage Blocked Numbers</string>
    <!--endregion-->

    <!--region pref summary -->
    <!--endregion-->

    <!--region pref default value-->
    <!--endregion-->

    <!--region errors-->
    <string name="error_no_results">No Results</string>
    <string name="error_no_results_recents">No Recents</string>
    <string name="error_no_results_contacts">No Contacts</string>
    <string name="error_no_results_phones">No phone numbers</string>
    <string name="error_not_default_dialer_blocked">Set koler as default dialer to see blocked numbers</string>
    <string name="error_not_default_dialer_call">Set koler as your default dialer to make calls</string>

    <string name="error_no_permissions_edit_call_log">No permission to change call log :)</string>
    <string name="error_no_permissions_make_call">No permissions to make a call :(</string>
    <string name="error_no_permissions_phones">I need permission to read contacts :)</string>
    <string name="error_no_permissions_recents">I need permission to read call log :)</string>
    <string name="error_no_permissions_contacts">I need permission to read contacts :)</string>

    <string name="error_no_number_to_call">No number was found :(</string>

    <string name="error_cant_hold_call">Can\'t hold call</string>
    <string name="error_cant_swap_calls">Can\'t swap calls</string>
    <string name="error_cant_merge_call">Can\'t merge call</string>

    <string name="error_couldnt_get_number_from_intent">Couldn\'t find number</string>
    <!--endregion-->

    <!--region pref color values-->
    <!--endregion-->

    <!--region pref values-->
    <string name="pref_value_page_contacts">contacts</string>
    <string name="pref_value_page_recents">recents</string>
    <string name="pref_value_page_default">@string/pref_value_page_contacts</string>
    <!--endregion-->

    <!--region dialpad letters-->
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters">Voicemail</string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters" />
    <string name="dialpad_pound_letters" />
    <!--endregion-->

    <!--region content descriptions -->
    <string name="content_description_menu_button">Menu Button</string>
    <string name="content_description_answer_button">Answer Button</string>
    <string name="content_description_reject_button">Reject Button</string>
    <string name="content_description_call_actions_button">Call Actions</string>
    <!--endregion-->

    <!--region notification-->
    <string name="call_notification_channel_name">Call Notification</string>
    <string name="call_notification_channel_description">Active call notification, shown for comfortable usage</string>
    <!--endregion-->

    <!--region phone type-->
    <!--endregion-->

    <!--region audio route-->
    <string name="audio_route_speaker">Speaker</string>
    <string name="audio_route_earpiece">Earpiece</string>
    <string name="audio_route_bluetooth">Bluetooth</string>
    <string name="audio_route_wired_headset">Wired Headset</string>
    <string name="audio_route_wired_or_earpiece">Wired or Earpiece</string>
    <!--endregion-->

    <!--region content description-->
    <string name="content_description_favorite_star">Favorite star</string>
    <string name="content_description_empty_list_icon">Empty list icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_wallet">My Wallet</string>
    <string name="select_ad_preferences">Select Ad Preferences</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="rate_us">Rate Us</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="shyam">Shyam</string>
    <string name="withdrawls_will_be_processed_in_48_hour">Withdrawls will be processed in 48 hour</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>