<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_chooloo_accent_color"
        android:icon="@drawable/round_palette_20"
        android:title="@string/pref_title_app_color" />

    <item
        android:id="@+id/menu_chooloo_theme_mode"
        android:icon="@drawable/round_invert_colors_20"
        android:title="@string/pref_title_theme_mode" />

    <item
        android:id="@+id/menu_chooloo_compact_mode"
        android:icon="@drawable/round_view_compact_20"
        android:title="@string/pref_title_compact" />
    <item
        android:id="@+id/menu_chooloo_animations"
        android:icon="@drawable/round_animation_20"
        android:title="@string/pref_title_animations" />


    <!--    <item-->
    <!--        android:id="@+id/menu_chooloo_donate"-->
    <!--        android:icon="@drawable/round_paid_20"-->
    <!--        android:title="@string/pref_title_donate" />-->


</menu>